# wc-2026-gaffer

./: .firebaserc  .gitignore  DEPLOY.md  README.md  firebase.json
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml  update.yml
model/: pyproject.toml  requirements-dev.txt  requirements.txt
model/data/output/: bracket.json  groups.json  history.json  matches.json  meta.json  model.json  paths.json  predictions_log.json  ratings_history.json  scorecard.json  teams.json
model/data/raw/: kalshi_wcadvance.json  kalshi_wcgame.json  transfermarkt_values.json
model/src/wc_model/: __init__.py  backtest.py  compare.py  config.py  history.py  material_diff.py  pipeline.py  predictions_log.py
model/src/wc_model/data/: __init__.py  confederations.py  flags.py  kalshi.py  results.py  transfermarkt.py
model/src/wc_model/goals/: __init__.py  blend.py  dixon_coles.py  strength.py
model/src/wc_model/ratings/: __init__.py  build.py  elo.py
model/src/wc_model/sim/: __init__.py  bracket_2026.py  knockout.py  simulate.py
model/tests/: conftest.py  test_blend.py  test_bracket.py  test_compare.py  test_data.py  test_dixon_coles.py  test_elo.py  test_knockout.py  test_material_diff.py  test_pipeline.py  test_predictions_log.py  test_simulate.py  test_strength.py
tasks/: lessons.md  todo.md
web/: README.md  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  template.tsx
web/components/: BracketFunnel.tsx  BracketTree.tsx  CountUp.tsx  FavoriteSpotlight.tsx  Flag.tsx  Footer.tsx  GroupsGrid.tsx  (+14 more)
(+39 files in other folders)
