[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wc-model"
version = "0.1.0"
description = "GAFFER — World Cup 2026 prediction model (PADDLIN'-style): results-Elo -> Dixon-Coles goal model -> Monte Carlo simulation -> JSON"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 110
src = ["src", "tests"]

[tool.ruff.lint]
# Defaults (pycodestyle errors + pyflakes) plus import sorting.
extend-select = ["I"]
# The vectorized numpy code deliberately uses a compact multi-statement style
# (`a += 1; b += 1`) and short math names; don't fight it.
ignore = ["E701", "E702", "E741"]

[tool.ruff.lint.isort]
known-first-party = ["wc_model"]
